added search function

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src="https://api.ravepay.co/flwv3-pug/getpaidx/api/flwpbf-inline.js"></script>
     <script src="https://kit.fontawesome.com/248d962fea.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans|Noto+Sans|Righteous|Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
